@@ -1,9 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1034 2011-05-19 00:45:38 remko Exp $
+	$Id: ChangeLog,v 1.1035 2011-05-19 02:51:15 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-05-19	remko
 	* pslib.c, pslib_f77.c:	Split off Fortran bindings
+	* pslib.c, gmt_support.c:	Make new *_getusername routines, returning "unknown" on WIN32.
 
 2011-05-18	remko
 	* *.tex:		Removed .gmt_bb_info; replaced {\it} by \emph{} and {\bf} by \textbf{}.
